# WebAudit

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AUDIT_REPORT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.en.md  README.md  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  publish.yml
api/: app.py  auth.py  models.py
api/routes/: audit.py  history.py  schedule.py  ws.py
api/templates/: dashboard.html
audit/: __init__.py  base.py  result.py  runner.py
audit/api/: __init__.py  auditor.py
audit/auth/: __init__.py  auditor.py
audit/backend/: __init__.py  auditor.py
audit/database/: __init__.py  auditor.py
audit/discovery/: __init__.py  detector.py
audit/e2e/: __init__.py  auditor.py
audit/frontend/: __init__.py  auditor.py
audit/javascript/: __init__.py  auditor.py
audit/mobile/: __init__.py  auditor.py
audit/performance/: __init__.py  auditor.py
audit/security/: __init__.py  auditor.py
audit/ux/: __init__.py  auditor.py
config/: __init__.py  default_config.json  settings.py
config/profiles/: ci.json  dev.json  prod.json  staging.json
notifications/: __init__.py  base.py  email.py  slack.py
reports/: __init__.py  generator.py
storage/: __init__.py  history.py  webaudit.db
tests/: __init__.py  test_audit_modules.py  test_auditors.py  test_core.py
utils/: __init__.py  constants.py  helpers.py  http_client.py  logger.py  playwright_pool.py  plugin_loader.py  scoring.py
