[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "webaudit"
version = "1.0.0"
description = "Professional Web Application Auditing Tool"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Desulma Jhonsley" }]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "httpx==0.27.2",
    "beautifulsoup4==4.15.0",
    "lxml==6.1.1",
    "cssutils==2.15.0",
    "playwright==1.60.0",
    "Pillow==12.2.0",
    "Jinja2==3.1.6",
    "fpdf2==2.8.7",
    "rich==15.0.0",
    "colorama==0.4.6",
    "pydantic==2.13.4",
    "PyJWT==2.13.0",
    "SQLAlchemy==2.0.51",
    "psutil==7.2.2",
    "asyncio-throttle==1.0.2",
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
]

[project.optional-dependencies]
dev = [
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
    "pytest-cov==7.1.0",
    "respx==0.21.1",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
webaudit = "main:main"

[project.urls]
Repository = "https://github.com/hack509/webAudit"

[tool.setuptools.packages.find]
exclude = ["venv*", "tests*", "logs*", "reports*", "screenshots*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=audit --cov=utils --cov=config --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
